# Vyre

Vyre/: index.html  package-lock.json  package.json  svelte.config.js  vite.config.ts
Vyre/src/: App.svelte  app.css  app.postcss  main.ts  vite-env.d.ts
Vyre/src-tauri/: Cargo.toml  tauri.conf.json
Vyre/src-tauri/src/: lib.rs
Vyre/src/components/: ChatListItem.svelte  Message.svelte  ServerStatus.svelte  UserInput.svelte
Vyre/src/routes/: Chat.svelte  Friends.svelte  Home.svelte  Login.svelte  Register.svelte
Vyre/src/utils/: window.ts
VyreBackend/: .env  index.js  package-lock.json  package.json  server.js  vyre.db
VyreBackend/src/controllers/: authController.js  chatController.js  serverController.js
VyreBackend/src/db/: database.js
VyreBackend/src/middleware/: auth.js
VyreBackend/src/routes/: authRoutes.js  chatRoutes.js  messageRoutes.js  serverRoutes.js
VyreBackend/src/routes/auth/: validate-token.js
VyreBackend/src/socket/: index.js
